objects/Gift_Card_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Includes_Gift_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Gift Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Developer_Name__c</fullName>
        <label>Queue Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Gift card mapping</label>
    <pluralLabel>Gift card mappings</pluralLabel>
</CustomObject>